@@ -5,7 +5,7 @@
 // the bitmap should follow this string and be 128x64 bytes long.
 // this is done so eePe can find the splash screen and replace it if need be.
 
-prog_uchar APM s9xsplashMarker[] = {
+const prog_uchar APM s9xsplashMarker[] = {
 "Splash"
 };
 
